# nthrow-demo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
custom/: custom.py  extractor.py  query.sql  test_extractor.py
daterange/: extractor.py  test_extractor.py
expandable/: extractor.py  test_extractor.py
simple/: extractor.py  test_custom.py  test_extractor.py
stream/: extractor.py  test_extractor.py
