[project]
name = "nthrow-fresh-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "aiohttp>=3.12.15",
    "b4>=0.14.2",
    "boto3>=1.40.16",
    "bs4>=0.0.2",
    "curl-cffi>=0.13.0",
    "loguru>=0.7.3",
    "moto[s3]>=4,<5",
    "pip>=25.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytz>=2025.2",
    "ruff>=0.12.10",
    "setuptools>=80.9.0",
    "w3lib>=2.3.1",
]
